# Piscine_python

day0/ex00/: Hello.py
day0/ex01/: format_ft_time.py
day0/ex02/: find_ft_type.py
day0/ex03/: NULL_not_found.py
day0/ex04/: whatis.py
day0/ex05/: building.py
day0/ex06/: filterstring.py  ft_filter.py
day0/ex07/: sos.py
day0/ex08/: Loading.py  tester.py
day0/ex09/: LICENCE  README.md  pyproject.toml  setup.py
day0/ex09/src/ft_package/: package.py
day0/ex09/src/ft_package.egg-info/: PKG-INFO  SOURCES.txt
day1/ex00/: give_bmi.py
day1/ex01/: array2D.py  tester.py
day1/ex02/: load_image.py  tester.py
day1/ex03/: load_image.py  zoom.py
day1/ex04/: load_image.py  rotate.py
day1/ex05/: load_image.py  pimp_image.py  tester.py
