[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ft_package"
version = "0.0.1"
authors = [
  { name="aducobu", email="aducobu@student.42.fr" },
]
description = "My first package creation"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/aurore-dcb/Piscine_python/tree/main/day0/ex09"
Issues = "https://github.com/aurore-dcb/Piscine_python/tree/main/day0/ex09"